--- a/index.html
+++ b/index.html
@@ -5,50 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.min.css">
-    <title>Template3</title>
+    <title>Template4</title>
 </head>
 <body>
-    <div class="slidercontainer">
-        <ul>
-        <li><img src="https://media.istockphoto.com/photos/low-angle-view-of-futuristic-architecture-skyscraper-office-building-picture-id1314918633?b=1&k=20&m=1314918633&s=170667a&w=0&h=2XJKUF2O9yhe-TGgSQKuMIQFAFJDp0oT9mAf_iAKqT4=" alt=""></li>
-        <li><img src="https://media.admagazine.com/photos/618a656258ac69e38abb6096/master/w_1600%2Cc_limit/66994.jpg" alt=""></li>
-        <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4c_Q2Q0R8zjtzi3ci6q_hbVJzgckMqBY1rw&usqp=CAU" alt=""></li>
-        </ul>
-    </div>
     <header>
         <div class="cont">
-            <div class="logo">Construct.IO</div>
-            <ul>
-                <li>Home</li>
-                <li>Blog</li>
-                <li>Contact</li>
-            </ul>
+            <div class="logo"></div>
+        <ul>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Typography</li>
+            <li>Contacts</li>
+            <li>Appointment</li>
+        </ul>
         </div>
     </header>
-    <div class="slider-content">
-        <div class="title">Hay una manera de determinar si una ruta de imagen conduce a una </div>
-        <div class="span">determinar si una ruta de imagen conduce a una Hay una manera de determinar si una ruta de imagen conduce a una </div>
-        <div class="boton">Here</div>
+    <div class="slide">
+        <img src="./img/slide.jpg" alt="">
+        <div class="cont">
+            <ul>
+                <li>We Offer</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                    illo cum hic id nobis non explicabo! Est ut doloribus nemo voluptates voluptate</li>
+                <li>Request Here</li>
+            </ul>
+        </div>
     </div>
     <section>
         <article>
-            <div class="title">Lorem Ipsum is simply dummy text of the printing and typesetting</div>
-            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, <br> but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release</div>
+            <div class="card">
+                <ul>
+                    <li>
+                        <img src="./img/law.png" alt="">
+                    </li>
+                    <li>
+                        Business Law
+                    </li>
+                    <li></li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aut veniam itaque perferendis laboriosam quidem quis,</li>
+                </ul>
+            </div>
+            <div class="card">
+                <ul>
+                    <li>
+                        <img src="./img/card.png" alt="">
+                    </li>
+                    <li>
+                        Family Law
+                    </li>
+                    <li></li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aut veniam itaque perferendis laboriosam quidem quis,</li>
+                </ul>
+            </div>
+            <div class="card">
+                <ul>
+                    <li>
+                        <img src="./img/box.png" alt="">
+                    </li>
+                    <li>
+                        Civil Litigation
+                    </li>
+                    <li></li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aut veniam itaque perferendis laboriosam quidem quis,</li>
+                </ul>
+            </div>
         </article>
-        <div class="img-parallax">
-            <img src="https://i.pinimg.com/474x/76/8d/08/768d086aae81763ca0e573dd3a77bf7f--arch-hotel-w-hotel.jpg" alt="">
-        </div>
-
-        <div class="languages">
-            <div><img src="img/iconhtml.png" alt=""></div>
-            <div><img src="img/iconcss.png" alt=""></div>
-            <div><img src="img/iconjs.png" alt=""></div>
-        </div>
-        <footer>
-            ariazjean@gmail.com
-        </footer>
     </section>
-    <script src="js/slider.js"></script>
-    <script src="js/parallax.js"></script>
+    <footer>
+        ariazjean@gmail.com
+    </footer>
+    <script src="./js/parallax.js"></script>
 </body>
 </html>
